refactoring and more implementation.
The sql store is refactored to smaller files. grpc access is now available to feature tree for getting features by properties. Although filtering on properties doesn't work yet.
